# axum-routing

./: Cargo.toml  README.md
database/: init.sql
src/: lib.rs  main.rs
src/data/: Cargo.toml
src/data/src/: lib.rs  main.rs
src/routes/: custom_json_extractor.rs  headers.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mod.rs  query_parameters.rs  set_middleware_custom_header.rs  validate_with_serde.rs
src/routing/: get_json.rs  headers.rs  middleware_message.rs  mirror_custom_header.rs  path_variables.rs  returns_201.rs  set_middleware_custom_header.rs
