workspace = { members = ["src/data"] }
[package]
name = "axum-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.3"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
